feat: Initialize project with basic structure, installation/start scripts, backend setup, and comprehensive documentation.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,10 +1,5 @@
-# Suno API
-SUNOAPI_URL='https://api.suno-proxy.click/song/'
-SUNOAPI_USERNAME=''
-SUNOAPI_PASSWORD=''
-
-# Google Sheets API
-SHEET_ID='1FFaCPSrOvCwG_ekeEPmre21Hl9y22bm606A0bBUaCl9'
-SERVICE_ACCOUNT_KEY='concrete-login-2ddbfa0e1bb7.json'
-
-PORT=5000
+AUTH_USERNAME=admin
+AUTH_PASSWORD=password
+ENABLE_AUTH=false
+CONCURRENT_TABS=3
+PORT=3000
